# ETNAD101.github.io

./: .gitignore  Cargo.toml  README.md  index.html  links.txt  style.css
src/: app.rs  backend.rs  components.rs  main.rs  menu.rs  pages.rs
src/backend/: bill.rs  cart.rs  category.rs  menu.rs  menu_item.rs  route.rs
src/components/: app.rs  cart_list.rs  clear_cart.rs  combined_bill.rs  item_details.rs  item_list.rs  menu_item_list.rs  mod.rs  navbar.rs  order_button.rs  person_button.rs  route.rs  seperate_bills.rs  text_input.rs
src/pages/: app.rs  bill_page.rs  description.rs  details_page.rs  menu.rs  menu_page.rs  not_found_page.rs  person_select_page.rs
src/stores/: bill_state_store.rs  cart_store.rs  mod.rs
src/tests/: mod.rs
