[package]
name = "comp_sci_order_system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features=["csr"] }
yew-router = "0.17.0"
gloo = "0.8.0"
wasm-bindgen = "0.2.86"
web-sys = { verison = "0.3.56", features = ["HtmlInputElement"] }
yewdux = "0.9.3"
serde = "1.0.163"